--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
+  background-color: #4c856b;
+  padding: 0 1rem;
   justify-content: space-between;
-  background: white;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,5 +9,11 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  border-radius: 8px;
+  width: 56px;
+}
+
+.navbar-left {
+  display: flex;
+  align-items: center;
 }
