--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="navbar-left">
-    <h2><strong><%= link_to "Toros Cocktails", cocktails_path %></strong></h2>
+    <h2><strong><%= link_to "Coquetéis da Piragibe", cocktails_path %></strong></h2>
   </div>
   <p class="btn btn-grad"><%= link_to 'Create Your Cocktail', new_cocktail_path %></p>
 </div>
